# my_boids

./: .gitignore  .pre-commit-config.yaml  Makefile  PERFORMANCE_ANALYSIS.md  README.md  benchmark_performance.py  boid.py  boids_sim.py  boids_sprite_sim.py  config.ini  example_sprites.py  moving_blocks.py  my_boids.py  pyproject.toml  read_config.py  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
boids/: boid_vs_boundary.py  boids.py  flock_rules.py  game.py  movement.py  options.py  player.py  predator.py
src/: boids.py
src/my_boids/: __init__.py  boid_vs_boundary.py  boids.py  boids_sim.py  flock_rules.py  game.py  hud.py  movement.py  options.py  performance.py  predator.py  predator_targeting.py  settings_ui.py  spatial_grid.py
tests/: conftest.py  test_boid_vs_boundary.py  test_boids.py  test_flock_rules.py  test_game.py  test_hud.py  test_movement.py  test_options.py  test_performance.py  test_predator.py  test_predator_reaction.py  test_predator_targeting.py  test_settings_ui.py  test_spatial_grid.py
