[metadata]
name = boids
version = 0.0.1
author = Tim Herrin
# author_email = author@example.com
description = PyGame implentation of Boids
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Teffluvium/my_boids.git
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.16
    pygame>=1.9.6
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
quaternions = py.typed

[flake8]
max-line-length = 120

[mypy]
# ignore_missing_imports = True
